dhall/tests/type-errors/unit/FunctionArgumentTypeNotAType.txt
 --> 1:7
  |
1 | λ(_ : 1) → _␊
  |       ^
  |
  = Type error: Invalid function input
